# doxa

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
doxa/: SPECIFICATION.md  __init__.py
doxa-native/: .gitignore  Cargo.toml  README.md
doxa-native/doxa_core/: Cargo.toml
doxa-native/doxa_core/src/: lib.rs  rule.rs  scc.rs  semantics.rs  types.rs
doxa-native/doxa_edb/: Cargo.toml
doxa-native/doxa_edb/src/: event_log.rs  lib.rs  store.rs
doxa-native/doxa_edb/tests/: edb_tests.rs
doxa-native/doxa_engine/: Cargo.toml
doxa-native/doxa_engine/src/: compiler.rs  eval.rs  join.rs  lib.rs  session.rs
doxa-native/doxa_engine/tests/: integration.rs
doxa-native/doxa_idb/: Cargo.toml
doxa-native/doxa_idb/src/: lib.rs  store.rs  types.rs
doxa-native/doxa_idb/tests/: basic.rs
doxa-native/doxa_py/: Cargo.toml
doxa-native/doxa_py/src/: lib.rs
doxa/cli/: __init__.py  commands.py  compat.py  extract_prompt_template.md  io.py  json_repair.py  main.py  merge.py  prompt.py  query_prompt_template.md  serialization.py  terminal.py
doxa/core/: __init__.py  annotate_mixin.py  audit_mixin.py  base.py  base_kinds.py  belief_record.py  branch.py  builtins.py  constraint.py  entity.py  epistemic_semantics.py  goal.py  goal_kinds.py  literal.py  literal_type.py  predicate.py  query.py  rule.py  schema_utils.py  template.py  template_registry.py  term_args.py  term_kinds.py  type_constraints.py  var.py
doxa/core/_parsing/: __init__.py  annotation_parser.py  annotation_utils.py  literal_value.py  parsing_utils.py
doxa/core/templates/: __init__.py  pred_template.py
doxa/docs/adr/: 0001-edb-source-of-truth.md
doxa/persistence/: __init__.py  memory.py  native.py  postgres.py  repository.py  split.py
doxa/query/: __init__.py  _answers.py  _builtins.py  _compilation.py  _epistemic.py  _solving.py  _types.py  _unification.py  engine.py  evaluator.py  memory.new.py  memory.py  native.py  postgres.py  postgres_native.py  postprocess.py
tests/: conftest.py
tests/cli/: test_commands.py  test_compat.py  test_main.py  test_prompt.py  test_terminal.py
tests/core/: test_annotate_mixin.py  test_belief_record.py  test_branch.py  test_builtins.py  test_constraint.py  test_entity.py  test_literal.py  test_pred_ref.py  test_predicate.py  test_predicate_type_list.py  test_rule.py  test_smoke.py  test_template.py  test_temporal.py  test_var.py
tests/persistence/: test_native_edb_source_of_truth.py  test_native_repository.py  test_native_split.py
tests/query/: test_engine.py  test_inline_assumptions.py  test_memory.py  test_memory_engine.py  test_native_guardrails.py  test_native_parity.py  test_postgres_native.py
tests/terminal/: test_fixtures.py  test_perf_compare.py  test_postgres_fixtures.py
tests/terminal/fixtures/01_basic_facts/: expected.txt
tests/terminal/fixtures/02_rules/: expected.txt
tests/terminal/fixtures/03_naf/: expected.txt
tests/terminal/fixtures/04_eq_binder/: expected.txt
tests/terminal/fixtures/05_arithmetic/: expected.txt
tests/terminal/fixtures/06_between/: expected.txt
tests/terminal/fixtures/07_temporal/: expected.txt  input.doxa
(+136 files in other folders)
