[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "doxa"
version = "0.0.1"
description = "A epistemic logic-programming knowledge base toolkit."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Manuel Zierl", email = "manuel.zierl@web.de" }
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.0"
]

[project.scripts]
doxa = "doxa.cli.main:main"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "ruff",
    "testcontainers[postgres]>=4.0",
]

[project.urls]
Homepage = "https://github.com/ManuelZierl/doxa"
Source = "https://github.com/ManuelZierl/doxa"
Issues = "https://github.com/ManuelZierl/doxa/issues"

[tool.maturin]
manifest-path = "doxa-native/doxa_py/Cargo.toml"
module-name = "doxa._native"
python-source = "."
python-packages = ["doxa"]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
