[workspace]
resolver = "2"
members = [
    "doxa_core",
    "doxa_idb",
    "doxa_edb",
    "doxa_engine",
    "doxa_py",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"
pyo3 = { version = "0.22", features = ["extension-module"] }
