[package]
name = "doxa_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
doxa_core = { path = "../doxa_core" }
doxa_idb = { path = "../doxa_idb" }
doxa_edb = { path = "../doxa_edb" }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3.6"
